# poke-llm

./: .gitignore  README.en.md  README.md  pyproject.toml
assets/docs/: llm_traces.jsonl
logs/: llm_traces.jsonl
src/agent/: llm_player.py  test_llm_vs_random.py
