[project]
name = "poke-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaeuk Han",email = "jaeuk0228@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "poke-env (>=0.10.0,<0.11.0)",
    "openai (>=1.106.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# ...
packages = [{ include = "agent", from = "src" }]